<resources>
    <string name="app_name">Transaction Simulator</string>
    <string name="action_settings">Settings</string>

    <string name="ops">Ops!</string>
    <string name="general_error">A problem ocurred. Try again.</string>
    <string name="ok">Ok</string>
    <string name="simulate_transaction">Simulate Transaction</string>
    <string name="loading">Loading...</string>
    <string name="select">Select</string>

    <string name="name">Name</string>
    <string name="credit_card_type">Credit Card Type</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="expiration_date">Expiration</string>
    <string name="verification_digit">Verification Digit</string>
    <string name="value">Value</string>
    <string name="save">Save</string>

    <string name="required_name">Name is required.\n</string>
    <string name="required_credit_card_type">Credit Card Type is required.\n</string>
    <string name="required_credit_card_number">Credit Card Number is required.\n</string>
    <string name="digits_credit_card_number">Credit Card Number should have 16 digits.\n</string>
    <string name="required_expiration_month">Expiration Month is required.\n</string>
    <string name="required_expiration_year">Expiration Year is required.\n</string>
    <string name="required_verification_digit">Verification Digit is required.\n</string>
    <string name="digits_verification_digits">Verification Digit should have 3 digits.\n</string>
    <string name="required_value">Transaction Value is required.\n</string>

    <string name="no_transaction_simulated">No transaction simulated. Touch the button to create.</string>

</resources>
